# services/api/router.go
@@ -262,6 +262,7 @@ func NewRouter(db *sqlx.DB, cfg Config) (*chi.Mux, error) {
 		// =======================================================================
 		r.Mount("/jobs", jobs.Routes())
 		r.Post("/bulk/jobs/launch", jobs.BulkLaunchJobs)
+		r.Post("/bulk/hosts/create", hosts.BulkCreateHosts)
 
 		// =======================================================================
 		// Job Templates
